need integration tests and to figure out why user is not fining id column